--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "online-yoga",
   "version": "0.1.0",
-  "homepage": "https://sriharired.github.io/react-gh-pages",
+  "homepage": "https://sriharired.github.io/online-yoga-training",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
